fix: 전체 API테스트 도중 불러오지 못하는 값이 존재해 정상적으로 출력되게끔 변경함